--- a/app/src/main/res/layout/fragment_sign_up_name.xml
+++ b/app/src/main/res/layout/fragment_sign_up_name.xml
@@ -21,31 +21,6 @@
             android:textColor="@color/white"
             android:textSize="25dp" />
 
-        <LinearLayout
-            android:id="@+id/back_layout"
-            android:layout_width="wrap_content"
-            android:layout_height="fill_parent"
-            android:gravity="center_vertical"
-            android:orientation="horizontal">
-
-            <ImageView
-                android:id="@+id/img_close"
-                android:layout_width="25dp"
-                android:layout_height="25dp"
-                android:layout_centerVertical="true"
-                android:layout_marginLeft="10dp"
-                android:src="@mipmap/btn_back_arrow" />
-
-            <TextView
-                android:id="@+id/txt_back"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:layout_toRightOf="@+id/img_close"
-                android:text="@string/str_back"
-                android:textColor="@color/white"
-                android:textSize="20dp" />
-        </LinearLayout>
 
         <ImageView
             android:id="@+id/img_help"
@@ -174,12 +149,13 @@
             android:gravity="center_vertical"
             android:orientation="horizontal">
 
-            <ImageView
+            <de.hdodenhof.circleimageview.CircleImageView
+                xmlns:app="http://schemas.android.com/apk/res-auto"
                 android:id="@+id/img_user_picture"
                 android:layout_width="45dp"
                 android:layout_height="45dp"
                 android:layout_marginLeft="15dp"
-                android:src="@mipmap/user_example" />
+                android:src="@mipmap/default_avatar" />
 
             <TextView
                 android:id="@+id/txt_profile_label"
