--- a/app/src/main/res/layout/fragment_sign_up_office_address.xml
+++ b/app/src/main/res/layout/fragment_sign_up_office_address.xml
@@ -22,32 +22,6 @@
             android:textColor="@color/white"
             android:textSize="25dp" />
 
-        <LinearLayout
-            android:id="@+id/back_layout"
-            android:layout_width="wrap_content"
-            android:layout_height="fill_parent"
-            android:gravity="center_vertical"
-            android:orientation="horizontal">
-
-            <ImageView
-                android:id="@+id/img_close"
-                android:layout_width="25dp"
-                android:layout_height="25dp"
-                android:layout_centerVertical="true"
-                android:layout_marginLeft="10dp"
-                android:src="@mipmap/btn_back_arrow" />
-
-            <TextView
-                android:id="@+id/txt_back"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:layout_toRightOf="@+id/img_close"
-                android:text="@string/str_back"
-                android:textColor="@color/white"
-                android:textSize="20dp" />
-        </LinearLayout>
-
         <ImageView
             android:id="@+id/img_help"
             android:layout_width="35dp"
@@ -104,6 +78,7 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_horizontal"
                         android:ems="10"
+                        android:text="k3 Eric moore"
                         android:gravity="center"
                         android:inputType="text"
                         android:paddingBottom="@dimen/editext_padding"/>
@@ -129,13 +104,13 @@
                 android:layout_marginLeft="30dp"
                 android:layout_marginRight="30dp"
                 android:layout_marginTop="15dp"
-                android:weightSum="5"
+                android:weightSum="1"
                 android:orientation="horizontal">
 
                 <RelativeLayout
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
-                    android:layout_weight="3"
+                    android:layout_weight="0.5"
                     android:gravity="center_vertical"
                     android:orientation="horizontal">
 
@@ -145,6 +120,7 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_horizontal"
                         android:ems="10"
+                        android:text="Surulere"
                         android:gravity="center"
                         android:inputType="text"
                         android:paddingBottom="@dimen/editext_padding"/>
@@ -163,7 +139,7 @@
 
                 <RelativeLayout
                     android:layout_width="0dp"
-                    android:layout_weight="2"
+                    android:layout_weight="0.5"
                     android:layout_height="match_parent"
                     android:gravity="center_vertical"
                     android:orientation="horizontal">
@@ -175,6 +151,7 @@
                         android:layout_gravity="center_horizontal"
                         android:ems="10"
                         android:gravity="center"
+                        android:text="Lagos"
                         android:inputType="text"
                         android:paddingBottom="@dimen/editext_padding"/>
 
@@ -215,6 +192,7 @@
                         android:layout_gravity="center_horizontal"
                         android:ems="10"
                         android:gravity="center"
+                        android:text="101283"
                         android:inputType="number"
                         android:paddingBottom="@dimen/editext_padding"/>
 
@@ -255,14 +233,6 @@
                     android:layout_marginLeft="15dp" />
             </LinearLayout>
 
-            <ProgressBar
-                android:id="@+id/progressBar"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerHorizontal="true"
-                android:layout_gravity="center_horizontal"
-                android:indeterminate="false"
-                android:visibility="invisible" />
         </RelativeLayout>
     </ScrollView>
 
@@ -283,12 +253,13 @@
             android:gravity="center_vertical"
             android:orientation="horizontal">
 
-            <ImageView
+            <de.hdodenhof.circleimageview.CircleImageView
+                xmlns:app="http://schemas.android.com/apk/res-auto"
                 android:id="@+id/img_user_picture"
                 android:layout_width="45dp"
                 android:layout_height="45dp"
                 android:layout_marginLeft="15dp"
-                android:src="@mipmap/user_example" />
+                android:src="@mipmap/default_avatar" />
 
             <TextView
                 android:id="@+id/txt_profile_label"
