--- a/app/src/main/res/layout/fragment_sign_up_phone_fax.xml
+++ b/app/src/main/res/layout/fragment_sign_up_phone_fax.xml
@@ -22,32 +22,6 @@
             android:textColor="@color/white"
             android:textSize="25dp" />
 
-        <LinearLayout
-            android:id="@+id/back_layout"
-            android:layout_width="wrap_content"
-            android:layout_height="fill_parent"
-            android:gravity="center_vertical"
-            android:orientation="horizontal">
-
-            <ImageView
-                android:id="@+id/img_close"
-                android:layout_width="25dp"
-                android:layout_height="25dp"
-                android:layout_centerVertical="true"
-                android:layout_marginLeft="10dp"
-                android:src="@mipmap/btn_back_arrow" />
-
-            <TextView
-                android:id="@+id/txt_back"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:layout_toRightOf="@+id/img_close"
-                android:text="@string/str_back"
-                android:textColor="@color/white"
-                android:textSize="20dp" />
-        </LinearLayout>
-
         <ImageView
             android:id="@+id/img_help"
             android:layout_width="35dp"
@@ -104,6 +78,7 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_horizontal"
                         android:ems="10"
+                        android:inputType="phone"
                         android:gravity="center"
                         android:paddingBottom="@dimen/editext_padding"/>
 
@@ -141,6 +116,7 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_horizontal"
                         android:ems="10"
+                        android:inputType="number"
                         android:gravity="center"
                         android:paddingBottom="@dimen/editext_padding"/>
 
@@ -152,18 +128,11 @@
                         android:paddingBottom="@dimen/label_padding"
                         android:text="@string/str_fax"
                         android:textSize="15dp" />
+
                 </RelativeLayout>
 
             </LinearLayout>
 
-            <ProgressBar
-                android:id="@+id/progressBar"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerHorizontal="true"
-                android:layout_gravity="center_horizontal"
-                android:indeterminate="false"
-                android:visibility="invisible" />
         </RelativeLayout>
     </ScrollView>
 
@@ -183,12 +152,13 @@
             android:gravity="center_vertical"
             android:orientation="horizontal">
 
-            <ImageView
+            <de.hdodenhof.circleimageview.CircleImageView
+                xmlns:app="http://schemas.android.com/apk/res-auto"
                 android:id="@+id/img_user_picture"
                 android:layout_width="45dp"
                 android:layout_height="45dp"
                 android:layout_marginLeft="15dp"
-                android:src="@mipmap/user_example" />
+                android:src="@mipmap/default_avatar" />
 
             <TextView
                 android:id="@+id/txt_profile_label"
