--- a/app/src/main/res/layout/fragment_sign_up_picture.xml
+++ b/app/src/main/res/layout/fragment_sign_up_picture.xml
@@ -22,7 +22,6 @@
             android:textColor="@color/white"
             android:textSize="25dp" />
 
-
         <ImageView
             android:id="@+id/img_help"
             android:layout_width="35dp"
@@ -45,13 +44,14 @@
             android:layout_height="wrap_content"
             android:paddingBottom="20dp">
 
-            <ImageView
+            <de.hdodenhof.circleimageview.CircleImageView
+                xmlns:app="http://schemas.android.com/apk/res-auto"
                 android:id="@+id/avatar"
+                android:layout_centerHorizontal="true"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
-                android:layout_centerHorizontal="true"
-                android:layout_marginTop="30dp"
-                android:src="@mipmap/default_avatar" />
+                android:src="@mipmap/default_avatar"
+                android:layout_marginTop="30dp" />
 
             <TextView
                 android:id="@+id/select_pics"
@@ -76,16 +76,6 @@
                 android:textColor="@color/white"
                 android:textSize="17sp" />
 
-
-            <ProgressBar
-                android:id="@+id/progressBar"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/txt_hint_string"
-                android:layout_centerHorizontal="true"
-                android:layout_marginBottom="66dp"
-                android:indeterminate="false"
-                android:visibility="invisible" />
         </RelativeLayout>
     </ScrollView>
 
@@ -106,12 +96,13 @@
             android:gravity="center_vertical"
             android:orientation="horizontal">
 
-            <ImageView
+            <de.hdodenhof.circleimageview.CircleImageView
+                xmlns:app="http://schemas.android.com/apk/res-auto"
                 android:id="@+id/img_user_picture"
                 android:layout_width="45dp"
                 android:layout_height="45dp"
                 android:layout_marginLeft="15dp"
-                android:src="@mipmap/user_example" />
+                android:src="@mipmap/default_avatar" />
 
             <TextView
                 android:id="@+id/txt_profile_label"
@@ -157,13 +148,6 @@
                     android:textColor="@color/white"
                     android:textSize="15dp" />
 
-                <!--<TextView-->
-                <!--android:layout_width="wrap_content"-->
-                <!--android:layout_height="wrap_content"-->
-                <!--android:text="12/20"-->
-                <!--android:id="@+id/textView"-->
-                <!--android:layout_below="@+id/txt_continue_label"-->
-                <!--android:layout_centerInParent="true" />-->
             </RelativeLayout>
         </RelativeLayout>
     </LinearLayout>
