--- a/app/src/main/res/layout/fragment_sign_up_verify_code.xml
+++ b/app/src/main/res/layout/fragment_sign_up_verify_code.xml
@@ -1,19 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@mipmap/background">
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="54dp"
+        android:layout_height="64dp"
         android:id="@+id/top_layout">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/str_signup"
+            android:text="@string/str_signup_hint19"
             android:id="@+id/txt_signup_label"
             android:textColor="@color/white"
             android:textSize="25dp"
@@ -47,125 +46,310 @@
                 android:layout_toRightOf="@+id/img_close" />
         </LinearLayout>
 
-        <ImageView
-            android:layout_width="35dp"
-            android:layout_height="35dp"
-            android:id="@+id/img_help"
-            android:src="@mipmap/btn_help"
-            android:layout_marginRight="15dp"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true" />
-
     </RelativeLayout>
 
-    <ScrollView
+    <TextView
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/str_signup_hint20"
+        android:id="@+id/txt_hint_string"
+        android:gravity="center_horizontal"
+        android:textColor="@color/white"
+        android:textSize="22dp"
+        android:layout_below="@+id/top_layout"
+        android:layout_marginTop="40dp"
+        android:layout_marginBottom="40dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp" />
+
+    <LinearLayout
+        android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/top_layout"
-        android:layout_above="@+id/continue_btn">
+        android:layout_below="@+id/txt_hint_string"
+        android:layout_marginLeft="30dp"
+        android:layout_marginRight="30dp"
+        android:id="@+id/code_layout">
 
         <RelativeLayout
+            android:orientation="horizontal"
             android:layout_width="match_parent"
-            android:paddingBottom="20dp"
-            android:layout_height="wrap_content">
+            android:layout_height="match_parent"
+            android:gravity="center_vertical">
 
             <TextView
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/str_signup_hint20"
-                android:id="@+id/txt_hint_string"
-                android:gravity="center_horizontal"
-                android:textColor="@color/white"
-                android:textSize="20sp"
-                android:layout_marginTop="40dp"
-                android:layout_marginBottom="40dp"
-                android:layout_marginLeft="15dp"
-                android:layout_marginRight="15dp"/>
-
-            <LinearLayout
-                android:orientation="vertical"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/txt_hint_string"
-                android:layout_marginLeft="30dp"
-                android:layout_marginRight="30dp"
-                android:id="@+id/phone_layout">
-
-                <RelativeLayout
-                    android:orientation="horizontal"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:gravity="center_vertical">
-
-                    <EditText
-                        android:layout_width="fill_parent"
-                        android:layout_height="wrap_content"
-                        android:ems="10"
-                        android:id="@+id/code"
-                        android:inputType="numberSigned"
-                        android:paddingBottom="@dimen/editext_padding"
-                        android:layout_gravity="center_horizontal"
-                        android:gravity="center" />
-
-                </RelativeLayout>
-
-            </LinearLayout>
-
-
-            <ProgressBar
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/progressBar"
-                android:layout_centerHorizontal="true"
-                android:visibility="invisible"
-                android:indeterminate="false"
-                android:layout_gravity="center_horizontal" />
+                android:ems="10"
+                android:id="@+id/txt_verify_code"
+                android:layout_gravity="center_horizontal"
+                android:gravity="center"
+                android:textSize="25dp"
+                android:textColor="@color/white" />
 
         </RelativeLayout>
-    </ScrollView>
-
-    <RelativeLayout
-        android:layout_width="fill_parent"
-        android:layout_height="60dp"
-        android:layout_alignParentBottom="true"
-        android:background="@color/button_bg"
-        android:clickable="true"
-        android:focusable="true"
-        android:id="@+id/continue_btn">
-
-        <ImageView
-            android:layout_width="25dp"
-            android:layout_height="25dp"
-            android:clickable="false"
-            android:focusable="false"
-            android:id="@+id/img_next_arrow"
-            android:src="@mipmap/btn_next_arrow"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            android:layout_marginRight="10dp" />
 
         <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:clickable="false"
-            android:focusable="false"
-            android:text="@string/str_continue"
-            android:id="@+id/txt_continue_label"
-            android:textSize="15dp"
-            android:textColor="@color/white"
-            android:layout_toLeftOf="@+id/img_next_arrow"
-            android:layout_centerVertical="true"
-            android:layout_marginRight="15dp" />
-    </RelativeLayout>
+            android:id="@+id/line1"
+            android:layout_width="fill_parent"
+            android:layout_height="0.1dp"
+            android:background="@color/button_material_light"
+            android:layout_marginTop="8dp" />
+
+    </LinearLayout>
 
     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="fill_parent"
-        android:layout_height="54dp"
+        android:layout_height="60dp"
+        android:layout_alignParentBottom="true"
+        android:id="@+id/bottom_layout"
+        android:background="@color/button_bg">
+
+        <TextView
+            android:layout_width="fill_parent"
+            android:layout_height="match_parent"
+            android:text="@string/str_help"
+            android:id="@+id/txt_help"
+            android:textColor="@color/white"
+            android:textSize="15dp"
+            android:layout_weight="1"
+            android:gravity="center_vertical|center_horizontal" />
+
+        <TextView
+            android:layout_width="0.1dp"
+            android:layout_height="fill_parent"
+            android:background="@color/button_material_light"
+            android:layout_marginTop="12dp"
+            android:layout_marginBottom="12dp"
+            android:id="@+id/line" />
+
+        <TextView
+            android:layout_width="fill_parent"
+            android:layout_height="match_parent"
+            android:text="@string/str_next"
+            android:id="@+id/txt_next"
+            android:textSize="15dp"
+            android:textColor="@color/white"
+            android:layout_centerInParent="true"
+            android:layout_weight="1"
+            android:gravity="center_vertical|center_horizontal" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/code_layout"
+        android:layout_above="@+id/bottom_layout"
+        android:layout_marginLeft="30dp"
+        android:layout_marginRight="30dp">
+
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="fill_parent"
+            android:layout_weight="1">
+
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent"
+                android:layout_weight="1"
+                android:gravity="center_vertical|center_horizontal">
+
+                <ImageView
+                    android:layout_width="55dp"
+                    android:layout_height="55dp"
+                    android:id="@+id/img_key1"
+                    android:src="@mipmap/keypad1"
+                    android:onClick="onKeyPadClick" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent"
+                android:layout_weight="1"
+                android:gravity="center_vertical|center_horizontal">
+
+                <ImageView
+                    android:layout_width="55dp"
+                    android:layout_height="55dp"
+                    android:id="@+id/img_key2"
+                    android:src="@mipmap/keypad2"
+                    android:onClick="onKeyPadClick" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent"
+                android:layout_weight="1"
+                android:gravity="center_vertical|center_horizontal">
+
+                <ImageView
+                    android:layout_width="55dp"
+                    android:layout_height="55dp"
+                    android:id="@+id/img_key3"
+                    android:src="@mipmap/keypad3"
+                    android:onClick="onKeyPadClick" />
+            </LinearLayout>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="fill_parent"
+            android:layout_weight="1">
+
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent"
+                android:layout_weight="1"
+                android:gravity="center_vertical|center_horizontal"
+                android:nestedScrollingEnabled="false"
+                android:onClick="onKeyPadClick">
+
+                <ImageView
+                    android:layout_width="55dp"
+                    android:layout_height="55dp"
+                    android:id="@+id/img_key4"
+                    android:src="@mipmap/keypad4"
+                    android:onClick="onKeyPadClick"/>
+            </LinearLayout>
+
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent"
+                android:layout_weight="1"
+                android:gravity="center_vertical|center_horizontal">
+
+                <ImageView
+                    android:layout_width="55dp"
+                    android:layout_height="55dp"
+                    android:id="@+id/img_key5"
+                    android:src="@mipmap/keypad5"
+                    android:onClick="onKeyPadClick" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent"
+                android:layout_weight="1"
+                android:gravity="center_vertical|center_horizontal">
+
+                <ImageView
+                    android:layout_width="55dp"
+                    android:layout_height="55dp"
+                    android:id="@+id/img_key6"
+                    android:src="@mipmap/keypad6"
+                    android:onClick="onKeyPadClick" />
+            </LinearLayout>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="fill_parent"
+            android:layout_weight="1">
+
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent"
+                android:layout_weight="1"
+                android:gravity="center_vertical|center_horizontal">
+
+                <ImageView
+                    android:layout_width="55dp"
+                    android:layout_height="55dp"
+                    android:id="@+id/img_key7"
+                    android:src="@mipmap/keypad7"
+                    android:onClick="onKeyPadClick" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent"
+                android:layout_weight="1"
+                android:gravity="center_vertical|center_horizontal">
+
+                <ImageView
+                    android:layout_width="55dp"
+                    android:layout_height="55dp"
+                    android:id="@+id/img_key8"
+                    android:src="@mipmap/keypad8"
+                    android:onClick="onKeyPadClick" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent"
+                android:layout_weight="1"
+                android:gravity="center_vertical|center_horizontal">
+
+                <ImageView
+                    android:layout_width="55dp"
+                    android:layout_height="55dp"
+                    android:id="@+id/img_key9"
+                    android:src="@mipmap/keypad9"
+                    android:onClick="onKeyPadClick" />
+            </LinearLayout>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="fill_parent"
+            android:layout_weight="1">
+
+            <ImageView
+                android:layout_width="fill_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1" />
+
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent"
+                android:layout_weight="1"
+                android:gravity="center_vertical|center_horizontal">
+
+                <ImageView
+                    android:layout_width="55dp"
+                    android:layout_height="55dp"
+                    android:id="@+id/img_key0"
+                    android:src="@mipmap/keypad0"
+                    android:onClick="onKeyPadClick" />
+            </LinearLayout>
+
+            <TextView
+                android:layout_width="fill_parent"
+                android:layout_height="match_parent"
+                android:id="@+id/txt_delete"
+                android:layout_weight="1"
+                android:text="@string/str_delete"
+                android:gravity="center_vertical|center_horizontal" />
+
+        </LinearLayout>
+    </LinearLayout>
+
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="fill_parent"
+        android:layout_height="64dp"
         android:background="@color/alert_bg_color"
         android:gravity="center_vertical|center_horizontal"
-        android:id="@+id/alert_valid"
-        android:visibility="gone">
+        android:id="@+id/alert_valid">
 
         <ImageView
             android:layout_width="30dp"
@@ -181,6 +365,5 @@
             android:textSize="17dp"
             android:layout_marginLeft="25dp" />
     </LinearLayout>
-
 
 </RelativeLayout>
